Long Term To Do List - aka Informal Roadmap
===========================================================================

- WebSocket Notifications
  - Prototype for background process notifications, to be used for various things but start with Payroll run
    (have page return immediately, send notification when done)
  - Added Notifications screen to MyAccount with transition to set receiveDate

- Try Caffeine JCache at https://github.com/ben-manes/caffeine
  - do in moqui-caffeine tool component
  - add multiple threads to SpeedTest.xml?

- Move tools from moqui-framework to tool components
  - Used in Mantle/HM/PC, but might not be used by all moqui-framework users
    - ElasticSearch (moqui-elasticsearch)
    - add mantle-usl dependencies on moqui-elasticsearch; moqui-kie is optional for mantle-usl
  - Possible to split out FOP?
    - Used in MoquiFopServlet, send email attachments, PDF render service, much more...

- Support some sort of built component archive?

- Saved form-list Finds
  - Save settings for a user or group to share (i.e. associate with userId or userGroupId). Allow for any group a user is in.

- Improved Distributed Datasource Support
  - Put all framework, mantle entities in the 4 new groups: transactional, nontransactional, configuration, analytical
  - Review warnings about view-entities that have members in multiple groups (which may be in different databases)
  - Test with transactional in H2 and nontransactional, configuration, analytical in OrientDB
  - Known changes needed
    - Check distributed foreign keys in create, update, delete (make sure records exist or don't exist in other databases)
    - Add augment-member to view-entity that can be in a separate database
      - Make it easier to define view-entity so that caller can treat it mostly as a normal join-based view
      - Augment query results with optionally cached values from records in a separate database